--- a/index.html
+++ b/index.html
@@ -2,58 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Take Selfie</title>
-  <style>
-    video, canvas {
-      display: block;
-      margin: 10px auto;
-      max-width: 100%;
-    }
-    button {
-      display: block;
-      margin: 10px auto;
-      padding: 10px 20px;
-      font-size: 16px;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>selfie_attendance</title>
 </head>
 <body>
+<button id="startCamera">Take Selfie</button>
+<video id="video" autoplay playsinline width="320" height="240" style="display:none;"></video>
+<canvas id="canvas" width="320" height="240" style="display: none;"></canvas>
+<img id="selfie" style="display: none;"/>
 
-  <button id="startCamera">Take Selfie</button>
-  <video id="video" autoplay playsinline width="320" height="240" style="display:none;"></video>
-  <canvas id="canvas" width="320" height="240" style="display:none;"></canvas>
-  <img id="selfie" style="display:none;" />
+<script>
+  const startCameraBtn=document.getElementById("startCamera");
+  const video=document.getElementById("video")
+  const canvas=document.getElementById("canvas")
+  const selfie=document.getElementById("selfie")
+  startCameraBtn.addEventListener("click",async()=>{
+    try{
+      const stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"user"}});
+      video.srcObject=stream;
+      video.style.display='block'
+      setTimeout(()=>{
+        canvas.getContext('2d').drawImage(video,0,0,canvas.width,canvas.height);
+        const imageData=canvas.toDataURL("image/png")
+        stream.getTracks().forEach(track=>track.stop());
+        selfie.src=imageData;
+        selfie.style.display='block';
+        video.style.display='none'
+        fetch("http://localhost:3000/upload",{
+          method:"POST",
+            headers:{
+              "Content-Type":"application/json"
+            },
+            body:JSON.stringify({image:imageData})
+          
+            
+        }).then(res=>res.text())
+        .then(msg=>alert(msg))
+        .catch(err=>alert("Failed to upload image"+ err))
 
-  <script>
-    const startCameraBtn = document.getElementById('startCamera');
-    const video = document.getElementById('video');
-    const canvas = document.getElementById('canvas');
-    const selfie = document.getElementById('selfie');
-
-    startCameraBtn.addEventListener('click', async () => {
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } });
-        video.srcObject = stream;
-        video.style.display = 'block';
-
-        setTimeout(() => {
-          // Draw video frame to canvas
-          canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
-          const imageData = canvas.toDataURL('image/png');
-
-          // Stop the camera
-          stream.getTracks().forEach(track => track.stop());
-
-          // Show the captured selfie
-          selfie.src = imageData;
-          selfie.style.display = 'block';
-          video.style.display = 'none';
-        }, 3000); // Take selfie after 3 seconds
-      } catch (err) {
-        alert('Could not access camera: ' + err);
-      }
-    });
-  </script>
-
+      },3000)
+    }catch(err){
+      alert("could not access camera:" +err)
+    }
+  });
+</script>
 </body>
 </html>
